@@ -10265,22 +10265,17 @@ name|eof
 init|=
 operator|(
 name|n
-operator|<
+operator|>=
 name|fstatus
 operator|.
 name|length
 operator|)
-condition|?
-literal|false
-else|:
-operator|(
+operator|&&
+operator|!
 name|dlisting
 operator|.
-name|getRemainingEntries
+name|hasMore
 argument_list|()
-operator|==
-literal|0
-operator|)
 decl_stmt|;
 name|Entry3
 index|[]
@@ -11165,22 +11160,17 @@ name|eof
 init|=
 operator|(
 name|n
-operator|<
+operator|>=
 name|fstatus
 operator|.
 name|length
 operator|)
-condition|?
-literal|false
-else|:
-operator|(
+operator|&&
+operator|!
 name|dlisting
 operator|.
-name|getRemainingEntries
+name|hasMore
 argument_list|()
-operator|==
-literal|0
-operator|)
 decl_stmt|;
 name|READDIRPLUS3Response
 operator|.
