@@ -331,6 +331,8 @@ Release 2.7.0 - UNRELEASED
     HDFS-6917. Add an hdfs debug command to validate blocks, call recoverlease,
     etc. (cmccabe)
 
+    HDFS-7356. Use DirectoryListing.hasMore() directly in nfs. (Li Lu via jing9)
+
   OPTIMIZATIONS
 
   BUG FIXES
